Fix: Fix HATEOAS

--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "format": "bun run --cwd frontend format && bun run --cwd backend format",
     "test": "bun run --cwd frontend test && bun run --cwd backend test",
     "test:ci": "bun run --cwd frontend test:ci && bun run --cwd backend test:ci",
-    "clean": "bun run dev:down && rm -rf node_modules data frontend/node_modules backend/node_modules frontend/dist frontend/.next backend/dist .env .env.dev .env.prod backend/.env .env-repo && echo '✅ Cleaned: node_modules, dist, .env files, .env-repo'",
-    "clean:force": "bun run dev:down && sudo rm -rf node_modules data frontend/node_modules backend/node_modules frontend/dist frontend/.next backend/dist .env .env.dev .env.prod backend/.env .env-repo && echo '✅ Force cleaned with sudo'",
+    "clean": "bun run dev:down ; rm -rf node_modules data frontend/node_modules backend/node_modules frontend/dist frontend/.next backend/dist .env .env.dev .env.prod backend/.env .env-repo ; echo '✅ Cleaned: node_modules, dist, .env files, .env-repo'",
+    "clean:force": "bun run dev:down ; sudo rm -rf node_modules data frontend/node_modules backend/node_modules frontend/dist frontend/.next backend/dist .env .env.dev .env.prod backend/.env .env-repo ; echo '✅ Force cleaned with sudo'",
     "db:up": "cd db && docker compose up -d",
     "db:down": "cd db && docker compose down",
     "db:logs": "docker logs -f syncnapse-postgres",
