--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -41,7 +41,7 @@ http {
     proxy_set_header Host $host;
 
     # Backend API routes
-    location /api/ {
+    location /api {
       proxy_http_version 1.1;
       proxy_pass http://backend;
     }
