--- a/backend/package.json
+++ b/backend/package.json
@@ -6,14 +6,14 @@
   "scripts": {
     "start": "node dist/main.js",
     "start:dev": "nodemon",
-    "build": "bunx nest build -c tsconfig.build.json",
-    "prisma:generate": "bunx prisma generate",
-    "prisma:migrate:dev": "bunx prisma migrate dev --name init",
-    "test": "bunx jest",
-    "test:watch": "bunx jest --watch",
-    "test:ci": "bunx jest --ci --bail",
-    "lint": "bunx eslint . --ext .ts",
-    "format": "bunx prettier --write ."
+    "build": "npx nest build -c tsconfig.build.json",
+    "prisma:generate": "npx prisma generate",
+    "prisma:migrate:dev": "npx prisma migrate dev --name init",
+    "test": "npx jest",
+    "test:watch": "npx jest --watch",
+    "test:ci": "npx jest --ci --bail",
+    "lint": "npx eslint . --ext .ts",
+    "format": "npx prettier --write ."
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.705.0",
@@ -38,6 +38,7 @@
     "bullmq": "^5.65.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "cookie-parser": "^1.4.7",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "llamaindex": "^0.12.0",
@@ -57,6 +58,7 @@
     "@nestjs/schematics": "^10.2.3",
     "@nestjs/testing": "^10.4.15",
     "@types/bun": "latest",
+    "@types/cookie-parser": "^1.4.10",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.5",
