feat: 강의노트 커서

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,13 +1,61 @@
-# 로컬 개발 환경 설정
-# .env.local 파일을 생성하여 사용하세요
+# =============================================================================
+# SyncNapse Frontend 환경 변수
+# =============================================================================
+# 이 파일을 .env.local로 복사하여 사용하세요
+# cp .env.example .env.local
 
-# IndexedDB 사용 여부 (개발 모드)
-# true: IndexedDB 사용 (백엔드 없이 로컬에서 작동)
-# false: 백엔드 API 사용 (프로덕션 모드)
-NEXT_PUBLIC_USE_LOCAL_DB=true
+# =============================================================================
+# API 설정 (필수)
+# =============================================================================
 
-# Mock 인증 사용 여부
+# 백엔드 API URL (클라이언트 사이드)
+# 개발: http://localhost:4000
+# 프로덕션: https://api.your-domain.com
+NEXT_PUBLIC_API_URL=http://localhost:4000
+
+# 내부 API URL (서버 사이드, Docker 환경)
+# Docker: http://backend:4000/api
+# 로컬: http://localhost:4000/api
+INTERNAL_API_URL=http://localhost:4000/api
+
+# =============================================================================
+# Liveblocks 설정 (실시간 협업 기능 사용 시 필수)
+# =============================================================================
+
+# Liveblocks 공개 키
+# https://liveblocks.io/dashboard 에서 발급
+NEXT_PUBLIC_LIVEBLOCKS_PUBLIC_KEY=pk_your_liveblocks_public_key
+
+# =============================================================================
+# 개발 모드 설정 (선택)
+# =============================================================================
+
+# Mock 인증 사용 (개발용)
+# true: Google OAuth 대신 Mock 사용자로 로그인
+# false 또는 미설정: 실제 Google OAuth 사용
 NEXT_PUBLIC_USE_MOCK_AUTH=true
 
-# 백엔드 API URL (프로덕션 모드일 때 사용)
-NEXT_PUBLIC_API_URL=http://localhost:8000
+# Mock API 사용 (개발용, Admin 페이지)
+# true: Mock 데이터 반환
+# false 또는 미설정: 실제 API 호출
+NEXT_PUBLIC_USE_MOCK_API=false
+
+# 로컬 DB 사용 (IndexedDB)
+# true 또는 미설정: IndexedDB 사용 (오프라인 지원)
+# false: 서버 API만 사용
+NEXT_PUBLIC_USE_LOCAL_DB=true
+
+# 기본 관리자 역할 (개발용)
+# admin, operator, user 중 선택
+# Mock 모드에서 localStorage에 역할이 없을 때 사용
+NEXT_PUBLIC_DEFAULT_ADMIN_ROLE=admin
+
+# =============================================================================
+# 분석 및 모니터링 (선택)
+# =============================================================================
+
+# Google Analytics ID (선택)
+# NEXT_PUBLIC_GA_ID=G-XXXXXXXXXX
+
+# Sentry DSN (선택)
+# NEXT_PUBLIC_SENTRY_DSN=https://xxx@xxx.ingest.sentry.io/xxx
