--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
     "format": "bunx prettier --write .",
     "test": "bunx vitest run -c vitest.config.mts",
     "test:watch": "bunx vitest -c vitest.config.mts",
-    "test:ci": "bunx vitest run --reporter=dot -c vitest.config.mts"
+    "test:ci": "NODE_OPTIONS='--max-old-space-size=4096' bunx vitest run --reporter=dot -c vitest.config.mts"
   },
   "dependencies": {
     "@blocknote/core": "^0.41.1",
@@ -59,6 +59,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.33",
     "fake-indexeddb": "^6.2.4",
+    "happy-dom": "^20.0.11",
     "jsdom": "^25.0.0",
     "postcss": "^8.5.6",
     "prettier": "^3.3.3",
