--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,8 @@
 # syntax=docker/dockerfile:1
 
 # ==========================================
-# Bun Alpine Backend Dockerfile
+# Node.js Alpine Backend Dockerfile
+# Build with Bun, Run with Node.js for AWS SDK compatibility
 # ==========================================
 
 FROM oven/bun:1-alpine AS deps
@@ -17,7 +18,8 @@ COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 RUN bunx prisma generate && bun run build
 
-FROM oven/bun:1-alpine AS runner
+# Use Node.js for runtime (better AWS SDK compatibility)
+FROM node:22-alpine AS runner
 RUN apk add --no-cache openssl ca-certificates
 ENV NODE_ENV=production
 WORKDIR /app
@@ -26,4 +28,4 @@ COPY --from=build /app/package.json ./package.json
 COPY --from=build /app/node_modules ./node_modules
 COPY --from=build /app/prisma ./prisma
 EXPOSE 4000
-CMD ["bun", "run", "dist/main.js"]
+CMD ["node", "dist/main.js"]
