--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -42,7 +42,7 @@ services:
     volumes:
       - ./backend:/app
       - /app/node_modules
-    command: sh -lc "bunx prisma db push --accept-data-loss && bun run start:dev"
+    command: sh -lc "npx prisma db push --accept-data-loss && npm run start:dev"
     depends_on:
       postgres:
         condition: service_healthy
