--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "test": "npx jest",
     "test:watch": "npx jest --watch",
     "test:ci": "npx jest --ci --bail",
+    "test:coverage": "npx jest --ci --coverage",
     "lint": "npx eslint . --ext .ts",
     "format": "npx prettier --write ."
   },
@@ -67,6 +68,7 @@
     "@types/node": "^20.14.11",
     "@types/passport": "^1.0.17",
     "@types/passport-jwt": "^3.0.6",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@typescript-eslint/parser": "^8.18.0",
     "eslint": "^8.57.0",
@@ -74,9 +76,11 @@
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.29.1",
     "jest": "^29.7.0",
+    "jest-junit": "^16.0.0",
     "nodemon": "^3.1.7",
     "prettier": "^3.3.3",
     "prisma": "^5.22.0",
+    "supertest": "^7.1.4",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
