--- a/backend/tsconfig.build.json
+++ b/backend/tsconfig.build.json
@@ -7,7 +7,9 @@
   "exclude": [
     "node_modules",
     "dist",
+    "test",
     "**/*.spec.ts",
+    "**/*.e2e-spec.ts",
     "jest.config.ts"
   ]
 }
